[package]
name = "dlm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.0"
